@@ -51,11 +51,3 @@
 	- SSL cert support
 	- Namecheap too
 	- Pro only
-
- - Thunderbird auto-config
-	- https://www.virtualmin.com/node/24238
-	- CHANGELOG
-	- Test on lentor with Postfix submission
-	- Enable / disable for all domains in UI
-	- Don't do for alias domains
-	- Global backup and restore
