@@ -1380,3 +1380,4 @@ Backups can now be prevented from updating the incremental state, so that ad-hoc
 ---- Changes since 3.97 ----
 Updated the Z-push script installer to version 2.0.6, Dolibarr to 3.2.3, Django to 1.4.3, WordPress to 3.5.0, TWiki to 5.1.3, SMF to 2.0.3, CMS Made Simple to 1.11.4, Drupal to 7.18 and 6.27, phpMyAdmin to 3.5.5, eXtplorer to 2.1.2, TikiWiki to 10.0 and 6.9, SugarCRM to 6.5.9, Moodle to 2.4, FengOffice to 2.2.2, and Movable Type to 5.2.2. Added script installers for FileCharger and AjaXplorer.
 When disabling a top-level virtual server, an option is now available to also disable all sub-servers at the same time.
+Added the Mail Client Configuration page, for setting up a Thunderbird-style client autoconfiguration URL for all virtual servers.
